--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "nodepractice",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "api/index.js",
   "scripts": {
-    "build": "echo 'No build step required'",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node api/index.js",
+    "dev": "nodemon api/index.js",
+    "build": "echo 'No build step required'"
   },
   "keywords": [],
   "author": "",
